// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Admin Comments API API Key Permissions API key without comment permissions cannot browse comments 1: [body] 1`] = `
Object {
  "errors": Array [
    Object {
      "code": null,
      "context": null,
      "details": null,
      "ghostErrorCode": null,
      "help": null,
      "id": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "message": "You do not have permission to browse comments",
      "property": null,
      "type": "NoPermissionError",
    },
  ],
}
`;

exports[`Admin Comments API API Key Permissions API key without comment permissions cannot hide comments 1: [body] 1`] = `
Object {
  "errors": Array [
    Object {
      "code": null,
      "context": "You do not have permission to edit comments",
      "details": null,
      "ghostErrorCode": null,
      "help": null,
      "id": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "message": "Permission error, cannot edit comment.",
      "property": null,
      "type": "NoPermissionError",
    },
  ],
}
`;

exports[`Admin Comments API Browse All Always includes member and post relations 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "count": Object {
        "direct_replies": Any<Number>,
        "likes": Any<Number>,
        "replies": Any<Number>,
        "reports": Any<Number>,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": Nullable<StringMatching>,
      "html": "<p>This is a comment</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "member": Object {
        "avatar_image": null,
        "can_comment": true,
        "commenting": Object {
          "disabled": false,
          "disabled_reason": null,
          "disabled_until": null,
        },
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "post": Object {
        "excerpt": "HTML Ipsum Presents

Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum o",
        "feature_image": "http://127.0.0.1:2369/content/images/2018/hey.jpg",
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "title": "Ghostly Kitchen Sink",
        "url": Any<String>,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "status": "published",
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 1,
    },
  },
}
`;

exports[`Admin Comments API Browse All Can browse all comments across posts 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "count": Object {
        "direct_replies": Any<Number>,
        "likes": Any<Number>,
        "replies": Any<Number>,
        "reports": Any<Number>,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": Nullable<StringMatching>,
      "html": "<p>Comment on post 1</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "member": Object {
        "avatar_image": null,
        "can_comment": true,
        "commenting": Object {
          "disabled": false,
          "disabled_reason": null,
          "disabled_until": null,
        },
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "post": Object {
        "excerpt": "This is my custom excerpt!",
        "feature_image": "https://example.com/super_photo.jpg",
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "title": "HTML Ipsum",
        "url": Any<String>,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "status": "published",
    },
    Object {
      "count": Object {
        "direct_replies": Any<Number>,
        "likes": Any<Number>,
        "replies": Any<Number>,
        "reports": Any<Number>,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": Nullable<StringMatching>,
      "html": "<p>Comment on post 2</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "member": Object {
        "avatar_image": null,
        "can_comment": true,
        "commenting": Object {
          "disabled": false,
          "disabled_reason": null,
          "disabled_until": null,
        },
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "post": Object {
        "excerpt": "HTML Ipsum Presents

Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum o",
        "feature_image": "http://127.0.0.1:2369/content/images/2018/hey.jpg",
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "title": "Ghostly Kitchen Sink",
        "url": Any<String>,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "status": "published",
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 2,
    },
  },
}
`;

exports[`Admin Comments API Browse All Can filter by member_id 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "count": Object {
        "direct_replies": Any<Number>,
        "likes": Any<Number>,
        "replies": Any<Number>,
        "reports": Any<Number>,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": Nullable<StringMatching>,
      "html": "<p>This is a comment</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "member": Object {
        "avatar_image": null,
        "can_comment": true,
        "commenting": Object {
          "disabled": false,
          "disabled_reason": null,
          "disabled_until": null,
        },
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "post": Object {
        "excerpt": "HTML Ipsum Presents

Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum o",
        "feature_image": "http://127.0.0.1:2369/content/images/2018/hey.jpg",
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "title": "Ghostly Kitchen Sink",
        "url": Any<String>,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "status": "published",
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 1,
    },
  },
}
`;

exports[`Admin Comments API Browse All Can filter by status 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "count": Object {
        "direct_replies": Any<Number>,
        "likes": Any<Number>,
        "replies": Any<Number>,
        "reports": Any<Number>,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": Nullable<StringMatching>,
      "html": "<p>This is a comment</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "member": Object {
        "avatar_image": null,
        "can_comment": true,
        "commenting": Object {
          "disabled": false,
          "disabled_reason": null,
          "disabled_until": null,
        },
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "post": Object {
        "excerpt": "HTML Ipsum Presents

Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum o",
        "feature_image": "http://127.0.0.1:2369/content/images/2018/hey.jpg",
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "title": "Ghostly Kitchen Sink",
        "url": Any<String>,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "status": "hidden",
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 1,
    },
  },
}
`;

exports[`Admin Comments API Browse All Can order by created_at asc 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "count": Object {
        "direct_replies": Any<Number>,
        "likes": Any<Number>,
        "replies": Any<Number>,
        "reports": Any<Number>,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": Nullable<StringMatching>,
      "html": "<p>Older</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "member": Object {
        "avatar_image": null,
        "can_comment": true,
        "commenting": Object {
          "disabled": false,
          "disabled_reason": null,
          "disabled_until": null,
        },
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "post": Object {
        "excerpt": "HTML Ipsum Presents

Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum o",
        "feature_image": "http://127.0.0.1:2369/content/images/2018/hey.jpg",
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "title": "Ghostly Kitchen Sink",
        "url": Any<String>,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "status": "published",
    },
    Object {
      "count": Object {
        "direct_replies": Any<Number>,
        "likes": Any<Number>,
        "replies": Any<Number>,
        "reports": Any<Number>,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": Nullable<StringMatching>,
      "html": "<p>Newer</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "member": Object {
        "avatar_image": null,
        "can_comment": true,
        "commenting": Object {
          "disabled": false,
          "disabled_reason": null,
          "disabled_until": null,
        },
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "post": Object {
        "excerpt": "HTML Ipsum Presents

Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum o",
        "feature_image": "http://127.0.0.1:2369/content/images/2018/hey.jpg",
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "title": "Ghostly Kitchen Sink",
        "url": Any<String>,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "status": "published",
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 2,
    },
  },
}
`;

exports[`Admin Comments API Browse All Excludes deleted comments 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "count": Object {
        "direct_replies": Any<Number>,
        "likes": Any<Number>,
        "replies": Any<Number>,
        "reports": Any<Number>,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": Nullable<StringMatching>,
      "html": "<p>Published</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "member": Object {
        "avatar_image": null,
        "can_comment": true,
        "commenting": Object {
          "disabled": false,
          "disabled_reason": null,
          "disabled_until": null,
        },
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "post": Object {
        "excerpt": "HTML Ipsum Presents

Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum o",
        "feature_image": "http://127.0.0.1:2369/content/images/2018/hey.jpg",
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "title": "Ghostly Kitchen Sink",
        "url": Any<String>,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "status": "published",
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 1,
    },
  },
}
`;

exports[`Admin Comments API Browse All Excludes deleted comments even when they have published replies 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "count": Object {
        "direct_replies": Any<Number>,
        "likes": Any<Number>,
        "replies": 0,
        "reports": Any<Number>,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": Nullable<StringMatching>,
      "html": "<p>Published reply</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": "[removed]",
      "member": Object {
        "avatar_image": null,
        "can_comment": true,
        "commenting": Object {
          "disabled": false,
          "disabled_reason": null,
          "disabled_until": null,
        },
        "email": "member2@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": null,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent": Object {
        "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
        "edited_at": Nullable<StringMatching>,
        "html": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "in_reply_to_id": Nullable<StringMatching>,
        "in_reply_to_snippet": null,
        "member": null,
        "parent_id": Nullable<StringMatching>,
        "status": "deleted",
      },
      "parent_id": Nullable<StringMatching>,
      "post": Object {
        "excerpt": "HTML Ipsum Presents

Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum o",
        "feature_image": "http://127.0.0.1:2369/content/images/2018/hey.jpg",
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "title": "Ghostly Kitchen Sink",
        "url": Any<String>,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "status": "published",
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 1,
    },
  },
}
`;

exports[`Admin Comments API Browse All Includes hidden comments with full html for admin 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "count": Object {
        "direct_replies": Any<Number>,
        "likes": Any<Number>,
        "replies": Any<Number>,
        "reports": Any<Number>,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": Nullable<StringMatching>,
      "html": "<p>Hidden comment</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "member": Object {
        "avatar_image": null,
        "can_comment": true,
        "commenting": Object {
          "disabled": false,
          "disabled_reason": null,
          "disabled_until": null,
        },
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "post": Object {
        "excerpt": "HTML Ipsum Presents

Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum o",
        "feature_image": "http://127.0.0.1:2369/content/images/2018/hey.jpg",
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "title": "Ghostly Kitchen Sink",
        "url": Any<String>,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "status": "hidden",
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 1,
    },
  },
}
`;

exports[`Admin Comments API Browse All Orders by created_at desc by default 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "count": Object {
        "direct_replies": Any<Number>,
        "likes": Any<Number>,
        "replies": Any<Number>,
        "reports": Any<Number>,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": Nullable<StringMatching>,
      "html": "<p>Newer</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "member": Object {
        "avatar_image": null,
        "can_comment": true,
        "commenting": Object {
          "disabled": false,
          "disabled_reason": null,
          "disabled_until": null,
        },
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "post": Object {
        "excerpt": "HTML Ipsum Presents

Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum o",
        "feature_image": "http://127.0.0.1:2369/content/images/2018/hey.jpg",
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "title": "Ghostly Kitchen Sink",
        "url": Any<String>,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "status": "published",
    },
    Object {
      "count": Object {
        "direct_replies": Any<Number>,
        "likes": Any<Number>,
        "replies": Any<Number>,
        "reports": Any<Number>,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": Nullable<StringMatching>,
      "html": "<p>Older</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "member": Object {
        "avatar_image": null,
        "can_comment": true,
        "commenting": Object {
          "disabled": false,
          "disabled_reason": null,
          "disabled_until": null,
        },
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "post": Object {
        "excerpt": "HTML Ipsum Presents

Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum o",
        "feature_image": "http://127.0.0.1:2369/content/images/2018/hey.jpg",
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "title": "Ghostly Kitchen Sink",
        "url": Any<String>,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "status": "published",
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 2,
    },
  },
}
`;

exports[`Admin Comments API Browse All Returns flat list including replies by default 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "count": Object {
        "direct_replies": Any<Number>,
        "likes": Any<Number>,
        "replies": Any<Number>,
        "reports": Any<Number>,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": Nullable<StringMatching>,
      "html": "<p>Parent</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "member": Object {
        "avatar_image": null,
        "can_comment": true,
        "commenting": Object {
          "disabled": false,
          "disabled_reason": null,
          "disabled_until": null,
        },
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "post": Object {
        "excerpt": "HTML Ipsum Presents

Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum o",
        "feature_image": "http://127.0.0.1:2369/content/images/2018/hey.jpg",
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "title": "Ghostly Kitchen Sink",
        "url": Any<String>,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "status": "published",
    },
    Object {
      "count": Object {
        "direct_replies": Any<Number>,
        "likes": Any<Number>,
        "replies": 0,
        "reports": Any<Number>,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": Nullable<StringMatching>,
      "html": "<p>Reply</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": "Parent",
      "member": Object {
        "avatar_image": null,
        "can_comment": true,
        "commenting": Object {
          "disabled": false,
          "disabled_reason": null,
          "disabled_until": null,
        },
        "email": "member2@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": null,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent": Object {
        "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
        "edited_at": Nullable<StringMatching>,
        "html": "<p>Parent</p>",
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "in_reply_to_id": Nullable<StringMatching>,
        "in_reply_to_snippet": null,
        "member": null,
        "parent_id": Nullable<StringMatching>,
        "status": "published",
      },
      "parent_id": Nullable<StringMatching>,
      "post": Object {
        "excerpt": "HTML Ipsum Presents

Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum o",
        "feature_image": "http://127.0.0.1:2369/content/images/2018/hey.jpg",
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "title": "Ghostly Kitchen Sink",
        "url": Any<String>,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "status": "published",
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 2,
    },
  },
}
`;

exports[`Admin Comments API Browse All Returns only top-level with include_nested=false 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "count": Object {
        "direct_replies": Any<Number>,
        "likes": Any<Number>,
        "replies": Any<Number>,
        "reports": Any<Number>,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": Nullable<StringMatching>,
      "html": "<p>Parent</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "member": Object {
        "avatar_image": null,
        "can_comment": true,
        "commenting": Object {
          "disabled": false,
          "disabled_reason": null,
          "disabled_until": null,
        },
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "post": Object {
        "excerpt": "HTML Ipsum Presents

Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum o",
        "feature_image": "http://127.0.0.1:2369/content/images/2018/hey.jpg",
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "title": "Ghostly Kitchen Sink",
        "url": Any<String>,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "status": "published",
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 1,
    },
  },
}
`;

exports[`Admin Comments API Browse All Supports pagination 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "count": Object {
        "direct_replies": Any<Number>,
        "likes": Any<Number>,
        "replies": Any<Number>,
        "reports": Any<Number>,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": Nullable<StringMatching>,
      "html": "<p>This is a comment</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "member": Object {
        "avatar_image": null,
        "can_comment": true,
        "commenting": Object {
          "disabled": false,
          "disabled_reason": null,
          "disabled_until": null,
        },
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "post": Object {
        "excerpt": "HTML Ipsum Presents

Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum o",
        "feature_image": "http://127.0.0.1:2369/content/images/2018/hey.jpg",
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "title": "Ghostly Kitchen Sink",
        "url": Any<String>,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "status": "published",
    },
    Object {
      "count": Object {
        "direct_replies": Any<Number>,
        "likes": Any<Number>,
        "replies": Any<Number>,
        "reports": Any<Number>,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": Nullable<StringMatching>,
      "html": "<p>This is a comment</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "member": Object {
        "avatar_image": null,
        "can_comment": true,
        "commenting": Object {
          "disabled": false,
          "disabled_reason": null,
          "disabled_until": null,
        },
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "post": Object {
        "excerpt": "HTML Ipsum Presents

Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum o",
        "feature_image": "http://127.0.0.1:2369/content/images/2018/hey.jpg",
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "title": "Ghostly Kitchen Sink",
        "url": Any<String>,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "status": "published",
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 2,
      "next": 2,
      "page": 1,
      "pages": 3,
      "prev": null,
      "total": 5,
    },
  },
}
`;

exports[`Admin Comments API Comment Likes Can browse comment likes 1: [body] 1`] = `
Object {
  "comment_likes": Array [
    Object {
      "comment_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "member": Object {
        "avatar_image": null,
        "can_comment": true,
        "commenting": Object {
          "disabled": false,
          "disabled_reason": null,
          "disabled_until": null,
        },
        "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
        "email": "member2@test.com",
        "email_count": 0,
        "email_disabled": false,
        "email_open_rate": 50,
        "email_opened_count": 0,
        "enable_comment_notifications": true,
        "expertise": null,
        "geolocation": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "last_commented_at": Nullable<StringMatching>,
        "last_seen_at": Nullable<StringMatching>,
        "name": null,
        "note": null,
        "status": "free",
        "transient_id": Any<String>,
        "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "member_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
    },
    Object {
      "comment_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "member": Object {
        "avatar_image": null,
        "can_comment": true,
        "commenting": Object {
          "disabled": false,
          "disabled_reason": null,
          "disabled_until": null,
        },
        "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
        "email": "paid@test.com",
        "email_count": 0,
        "email_disabled": false,
        "email_open_rate": 80,
        "email_opened_count": 0,
        "enable_comment_notifications": true,
        "expertise": null,
        "geolocation": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "last_commented_at": Nullable<StringMatching>,
        "last_seen_at": Nullable<StringMatching>,
        "name": "Egon Spengler",
        "note": null,
        "status": "paid",
        "transient_id": Any<String>,
        "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "member_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 2,
    },
  },
}
`;

exports[`Admin Comments API Comment Likes Returns 404 for non-existent comment 1: [body] 1`] = `
Object {
  "errors": Array [
    Object {
      "code": null,
      "context": "Comment could not be found",
      "details": null,
      "ghostErrorCode": null,
      "help": null,
      "id": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "message": "Resource not found error, cannot list comment_likes.",
      "property": null,
      "type": "NotFoundError",
    },
  ],
}
`;

exports[`Admin Comments API Comment Likes Returns empty list for comment with no likes 1: [body] 1`] = `
Object {
  "comment_likes": Array [],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 0,
    },
  },
}
`;

exports[`Admin Comments API Comment Reports Can browse reporters for a comment 1: [body] 1`] = `
Object {
  "comment_reports": Array [
    Object {
      "comment_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "member": Object {
        "avatar_image": null,
        "can_comment": true,
        "commenting": Object {
          "disabled": false,
          "disabled_reason": null,
          "disabled_until": null,
        },
        "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
        "email": "member2@test.com",
        "email_count": 0,
        "email_disabled": false,
        "email_open_rate": 50,
        "email_opened_count": 0,
        "enable_comment_notifications": true,
        "expertise": null,
        "geolocation": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "last_commented_at": Nullable<StringMatching>,
        "last_seen_at": Nullable<StringMatching>,
        "name": null,
        "note": null,
        "status": "free",
        "transient_id": Any<String>,
        "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "member_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
    },
    Object {
      "comment_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "member": Object {
        "avatar_image": null,
        "can_comment": true,
        "commenting": Object {
          "disabled": false,
          "disabled_reason": null,
          "disabled_until": null,
        },
        "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
        "email": "paid@test.com",
        "email_count": 0,
        "email_disabled": false,
        "email_open_rate": 80,
        "email_opened_count": 0,
        "enable_comment_notifications": true,
        "expertise": null,
        "geolocation": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "last_commented_at": Nullable<StringMatching>,
        "last_seen_at": Nullable<StringMatching>,
        "name": "Egon Spengler",
        "note": null,
        "status": "paid",
        "transient_id": Any<String>,
        "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "member_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 2,
    },
  },
}
`;

exports[`Admin Comments API Comment Reports Returns 404 for non-existent comment 1: [body] 1`] = `
Object {
  "errors": Array [
    Object {
      "code": null,
      "context": "Comment could not be found",
      "details": null,
      "ghostErrorCode": null,
      "help": null,
      "id": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "message": "Resource not found error, cannot list comment_reports.",
      "property": null,
      "type": "NotFoundError",
    },
  ],
}
`;

exports[`Admin Comments API Comment Reports Returns empty list for comment with no reports 1: [body] 1`] = `
Object {
  "comment_reports": Array [],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 0,
    },
  },
}
`;

exports[`Admin Comments API Hide Can hide comments 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "count": Object {
        "direct_replies": 0,
        "likes": Any<Number>,
        "replies": 0,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": null,
      "html": "<p>This is a comment</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "liked": Any<Boolean>,
      "member": Object {
        "avatar_image": null,
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "replies": Array [],
      "status": "published",
    },
  ],
}
`;

exports[`Admin Comments API Hide Can hide comments 2: [headers] 1`] = `
Object {
  "access-control-allow-credentials": "true",
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "446",
  "content-type": "application/json; charset=utf-8",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Admin Comments API Hide Can hide comments 3: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "count": Object {
        "direct_replies": 0,
        "likes": Any<Number>,
        "replies": 0,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": null,
      "html": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "liked": Any<Boolean>,
      "member": Object {
        "avatar_image": null,
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "replies": Array [],
      "status": "hidden",
    },
  ],
}
`;

exports[`Admin Comments API Hide Can hide comments 4: [headers] 1`] = `
Object {
  "access-control-allow-credentials": "true",
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "421",
  "content-type": "application/json; charset=utf-8",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Admin Comments API Hide Can hide replies 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "count": Object {
        "direct_replies": 0,
        "likes": Any<Number>,
        "replies": 0,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": null,
      "html": "<p>This is a reply</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "liked": Any<Boolean>,
      "member": Object {
        "avatar_image": null,
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": null,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "replies": Array [],
      "status": "published",
    },
  ],
}
`;

exports[`Admin Comments API Hide Can hide replies 2: [headers] 1`] = `
Object {
  "access-control-allow-credentials": "true",
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "462",
  "content-type": "application/json; charset=utf-8",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Admin Comments API Hide Can hide replies 3: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "count": Object {
        "direct_replies": 0,
        "likes": Any<Number>,
        "replies": 0,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": null,
      "html": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "liked": Any<Boolean>,
      "member": Object {
        "avatar_image": null,
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": null,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "replies": Array [],
      "status": "hidden",
    },
  ],
}
`;

exports[`Admin Comments API Hide Can hide replies 4: [headers] 1`] = `
Object {
  "access-control-allow-credentials": "true",
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "439",
  "content-type": "application/json; charset=utf-8",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Admin Comments API Logged in member gets own likes via admin api can get comment liked status by impersonating member via admin browse route 1: [headers] 1`] = `
Object {
  "access-control-allow-credentials": "true",
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Origin",
  "x-cache-invalidate": "/api/members/comments/post/618ba1ffbe2896088840a6e1/",
  "x-powered-by": "Express",
}
`;

exports[`Admin Comments API Logged in member gets own likes via admin api can get comment liked status by impersonating member via admin get by comment id read route 1: [headers] 1`] = `
Object {
  "access-control-allow-credentials": "true",
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Origin",
  "x-cache-invalidate": "/api/members/comments/post/618ba1ffbe2896088840a6e1/",
  "x-powered-by": "Express",
}
`;

exports[`Admin Comments API Logged in member gets own likes via admin api can get comment liked status by impersonating member via admin get by comment replies route 1: [headers] 1`] = `
Object {
  "access-control-allow-credentials": "true",
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Origin",
  "x-cache-invalidate": "/api/members/comments/post/618ba1ffbe2896088840a6e1/",
  "x-powered-by": "Express",
}
`;

exports[`Admin Comments API browse by post Does return published replies 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "count": Object {
        "direct_replies": 3,
        "likes": Any<Number>,
        "replies": 3,
        "reports": 0,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": null,
      "html": "<p>This is a comment</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "liked": Any<Boolean>,
      "member": Object {
        "avatar_image": null,
        "can_comment": true,
        "commenting": Object {
          "disabled": false,
          "disabled_reason": null,
          "disabled_until": null,
        },
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "replies": Array [
        Object {
          "count": Object {
            "direct_replies": 0,
            "likes": Any<Number>,
            "reports": 0,
          },
          "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
          "edited_at": null,
          "html": Any<String>,
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "in_reply_to_id": null,
          "in_reply_to_snippet": null,
          "liked": false,
          "member": Object {
            "avatar_image": Nullable<Any<String>>,
            "can_comment": true,
            "commenting": Object {
              "disabled": false,
              "disabled_reason": null,
              "disabled_until": null,
            },
            "email": "member2@test.com",
            "expertise": null,
            "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
            "name": Nullable<Any<String>>,
            "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
          },
          "parent_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "status": Any<String>,
        },
        Object {
          "count": Object {
            "direct_replies": 0,
            "likes": Any<Number>,
            "reports": 0,
          },
          "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
          "edited_at": null,
          "html": Any<String>,
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "in_reply_to_id": null,
          "in_reply_to_snippet": null,
          "liked": false,
          "member": Object {
            "avatar_image": Nullable<Any<String>>,
            "can_comment": true,
            "commenting": Object {
              "disabled": false,
              "disabled_reason": null,
              "disabled_until": null,
            },
            "email": "paid@test.com",
            "expertise": null,
            "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
            "name": Nullable<Any<String>>,
            "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
          },
          "parent_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "status": Any<String>,
        },
        Object {
          "count": Object {
            "direct_replies": 0,
            "likes": Any<Number>,
            "reports": 0,
          },
          "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
          "edited_at": null,
          "html": Any<String>,
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "in_reply_to_id": null,
          "in_reply_to_snippet": null,
          "liked": false,
          "member": Object {
            "avatar_image": Nullable<Any<String>>,
            "can_comment": true,
            "commenting": Object {
              "disabled": false,
              "disabled_reason": null,
              "disabled_until": null,
            },
            "email": "trialing@test.com",
            "expertise": null,
            "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
            "name": Nullable<Any<String>>,
            "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
          },
          "parent_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "status": Any<String>,
        },
      ],
      "status": "published",
    },
  ],
}
`;

exports[`Admin Comments API browse by post does not return deleted comments 1: [body] 1`] = `
Object {
  "comments": Array [],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 0,
    },
  },
}
`;

exports[`Admin Comments API browse by post does not return deleted replies 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "count": Object {
        "direct_replies": 2,
        "likes": Any<Number>,
        "replies": 2,
        "reports": 0,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": null,
      "html": "Comment 1",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "liked": Any<Boolean>,
      "member": Object {
        "avatar_image": null,
        "can_comment": true,
        "commenting": Object {
          "disabled": false,
          "disabled_reason": null,
          "disabled_until": null,
        },
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "replies": Array [
        Object {
          "count": Object {
            "direct_replies": 0,
            "likes": 0,
          },
          "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
          "edited_at": null,
          "html": "Reply 2",
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "in_reply_to_id": null,
          "in_reply_to_snippet": null,
          "liked": false,
          "member": Object {
            "avatar_image": null,
            "can_comment": true,
            "commenting": Object {
              "disabled": false,
              "disabled_reason": null,
              "disabled_until": null,
            },
            "email": "member1@test.com",
            "expertise": null,
            "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
            "name": "Mr Egg",
            "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
          },
          "parent_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "status": "hidden",
        },
        Object {
          "count": Object {
            "direct_replies": 0,
            "likes": 0,
          },
          "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
          "edited_at": null,
          "html": "Reply 3",
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "in_reply_to_id": null,
          "in_reply_to_snippet": null,
          "liked": false,
          "member": Object {
            "avatar_image": null,
            "can_comment": true,
            "commenting": Object {
              "disabled": false,
              "disabled_reason": null,
              "disabled_until": null,
            },
            "email": "member1@test.com",
            "expertise": null,
            "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
            "name": "Mr Egg",
            "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
          },
          "parent_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "status": "published",
        },
      ],
      "status": "published",
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 1,
    },
  },
}
`;

exports[`Admin Comments API browse by post excludes deleted comments when all replies are also deleted 1: [body] 1`] = `
Object {
  "comments": Array [],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 0,
    },
  },
}
`;

exports[`Admin Comments API browse by post includes hidden replies but not deleted replies in count 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "count": Object {
        "direct_replies": 2,
        "likes": Any<Number>,
        "replies": 2,
        "reports": 0,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": null,
      "html": "Comment 1",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "liked": Any<Boolean>,
      "member": Object {
        "avatar_image": null,
        "can_comment": true,
        "commenting": Object {
          "disabled": false,
          "disabled_reason": null,
          "disabled_until": null,
        },
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "replies": Array [
        Object {
          "count": Object {
            "direct_replies": 0,
            "likes": 0,
          },
          "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
          "edited_at": null,
          "html": "Reply 1",
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "in_reply_to_id": null,
          "in_reply_to_snippet": null,
          "liked": false,
          "member": Object {
            "avatar_image": null,
            "can_comment": true,
            "commenting": Object {
              "disabled": false,
              "disabled_reason": null,
              "disabled_until": null,
            },
            "email": "member1@test.com",
            "expertise": null,
            "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
            "name": "Mr Egg",
            "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
          },
          "parent_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "status": "hidden",
        },
        Object {
          "count": Object {
            "direct_replies": 0,
            "likes": 0,
          },
          "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
          "edited_at": null,
          "html": "Reply 3",
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "in_reply_to_id": null,
          "in_reply_to_snippet": null,
          "liked": false,
          "member": Object {
            "avatar_image": null,
            "can_comment": true,
            "commenting": Object {
              "disabled": false,
              "disabled_reason": null,
              "disabled_until": null,
            },
            "email": "member1@test.com",
            "expertise": null,
            "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
            "name": "Mr Egg",
            "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
          },
          "parent_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "status": "published",
        },
      ],
      "status": "published",
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 1,
    },
  },
}
`;

exports[`Admin Comments API browse by post returns deleted comments if they have published replies 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "count": Object {
        "direct_replies": 1,
        "likes": Any<Number>,
        "replies": 1,
        "reports": 0,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": null,
      "html": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "liked": Any<Boolean>,
      "member": Object {
        "avatar_image": null,
        "can_comment": true,
        "commenting": Object {
          "disabled": false,
          "disabled_reason": null,
          "disabled_until": null,
        },
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "replies": Array [
        Object {
          "count": Object {
            "direct_replies": 0,
            "likes": 0,
          },
          "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
          "edited_at": null,
          "html": "Reply 1",
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "in_reply_to_id": null,
          "in_reply_to_snippet": null,
          "liked": false,
          "member": Object {
            "avatar_image": null,
            "can_comment": true,
            "commenting": Object {
              "disabled": false,
              "disabled_reason": null,
              "disabled_until": null,
            },
            "email": "member1@test.com",
            "expertise": null,
            "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
            "name": "Mr Egg",
            "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
          },
          "parent_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "status": "published",
        },
      ],
      "status": "deleted",
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 1,
    },
  },
}
`;

exports[`Admin Comments API get by id does not include deleted replies 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "count": Object {
        "direct_replies": 0,
        "likes": Any<Number>,
        "replies": 0,
        "reports": 0,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": null,
      "html": "<p>This is a comment</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "liked": Any<Boolean>,
      "member": Object {
        "avatar_image": null,
        "can_comment": true,
        "commenting": Object {
          "disabled": false,
          "disabled_reason": null,
          "disabled_until": null,
        },
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "replies": Array [],
      "status": "published",
    },
  ],
}
`;
